--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build:remix": "remix build",
     "dev": "run-p \"dev:*\"",
     "dev:css": "npm run generate:css -- --watch",
-    "dev:remix": "remix dev",
+    "dev:remix": "netlify dev",
     "generate:css": "npx tailwindcss -o ./app/styles/tailwind.css",
     "start": "cross-env NODE_ENV=production netlify dev"
   },
@@ -17,6 +17,7 @@
     "@remix-run/node": "^1.7.2",
     "@remix-run/react": "^1.7.2",
     "cross-env": "^7.0.3",
+    "nodemailer": "^6.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -24,6 +25,7 @@
     "@remix-run/dev": "^1.7.2",
     "@remix-run/eslint-config": "^1.7.2",
     "@remix-run/serve": "^1.7.2",
+    "@types/nodemailer": "^6.4.6",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "eslint": "^8.23.1",
